# Web

./: .gitignore  Dockerfile
certs/: mkn.edu.csr
hw3/: index.html  script.js  style.css
hw4/: Cargo.toml  Rocket.toml
hw4/src/: main.rs
hw4/static/: style.css
hw4/templates/: index.html.tera  success.html.tera
hw7/: 1.ts  2.ts  3.ts  4.ts  test.ts
hw8/: .gitignore  Cargo.toml  docker-compose.yaml  package-lock.json  package.json
hw8/client/: .gitignore  Dockerfile  angular.json  package-lock.json  tailwind.config.js
hw8/client/src/: index.html  styles.scss
hw8/client/src/app/: constants.ts  items.service.ts
hw8/nginx/: nginx.conf
hw8/nginx/certs/: mkn.edu.ext
hw8/server/: Dockerfile  Rocket.toml
hw8/server/src/: main.rs
hw8/src/: output.scss
hw8/src/app/: app.component.ts  app.routes.ts  constants.ts  todo.service.ts  todoitem.ts
hw8/src/app/details/: details.component.html  details.component.ts
hw8/src/app/home/: home.component.html  home.component.ts
hw8/src/serv/: Cargo.toml
hw8/src/serv/src/: main.rs
hw9/: .gitignore  Cargo.toml  docker-compose.yml  package-lock.json  package.json
hw9/client/: Dockerfile  package-lock.json  package.json
hw9/client/src/: index.tsx
hw9/nginx/: Dockerfile  nginx.conf
hw9/nginx/certs/: mkn.edu.crt  mkn.edu.key  myCA.key  myCA.pem
hw9/public/: index.html
hw9/server/: Cargo.toml  Dockerfile
hw9/server/src/: main.rs
hw9/src/: index.js
hw9/src/components/: App.tsx  Chat.tsx  Login.tsx  Logout.tsx  Message.tsx  Routes.tsx  Socket.ts
hw9/src/styles/: chat.css  login.css
(+10 files in other folders)
