[package]
name = "serv"
version = "0.1.0"
edition = "2021"

[dependencies]
socketioxide = { features = ["extensions", "state"] }
tokio = { features = ["rt-multi-thread", "macros"] }
tower = { version = "0.4.13" }
tower-http = { version = "0.5.0", features = ["cors", "fs"] }
tracing = { version = "0.1.40" }
tracing-subscriber = { version = "0.3.18" }
serde = { version = "1.0.2" }
axum = "0.7.5"
tokio-util = "0.7.10"
serde_json = "1.0.116"
